# sc-ci-example

./: .gitignore  Cargo.toml  LICENSE  README.md  multicontract.toml
interact/: Cargo.toml
interact/src/: adder_interact.rs  adder_interact_cli.rs  adder_interact_state.rs
meta/: Cargo.toml
meta/src/: main.rs
scenarios/: workshop.scen.json
src/: workshop.rs
tests/: workshop_blackbox_test.rs  workshop_blackbox_upgrade_test.rs  workshop_blackbox_with_values_test.rs  workshop_scenario_go_test.rs  workshop_scenario_rs_test.rs  workshop_test.rs  workshop_whitebox_test.rs
wasm/: Cargo.toml
wasm-workshop-ev/: Cargo.toml
wasm-workshop-ev/src/: lib.rs
wasm/src/: lib.rs
